Adding page titles [green]

--- a/sample_app/app/views/static_pages/about.html.erb
+++ b/sample_app/app/views/static_pages/about.html.erb
@@ -1,10 +1,20 @@
-<h1>About</h1>
-<p>
-The <a href="http://railstutorial.org/"><em>Ruby on Rails Tutorial</em></a>
-is a <a href="http://railstutorial.org/book"><em>book</em> and 
-<a href="http://screencast.railstutorial.org/"><em>screencast series</em></a>
-to teach web development with 
-<a href="http://railstutorial.org/">Ruby on Rails</a>.
 
-This is a sample application for the Tutorial.
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About | Ruby on Rails Tutorial Sample App</title>
+  </head>
+
+  <body>
+    <h1>About</h1>
+    <p>
+    The <a href="http://railstutorial.org/"><em>Ruby on Rails Tutorial</em></a>
+    is a <a href="http://railstutorial.org/book"><em>book</em> and 
+    <a href="http://screencast.railstutorial.org/"><em>screencast series</em></a>
+    to teach web development with 
+    <a href="http://railstutorial.org/">Ruby on Rails</a>.
+
+    This is a sample application for the Tutorial.
+    </p>
+  </body>
+</html>
