--- a/sample_app/app/views/static_pages/about.html.erb
+++ b/sample_app/app/views/static_pages/about.html.erb
@@ -1,11 +1,5 @@
+<% provide(:title, "About") %>
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>About | Ruby on Rails Tutorial Sample App</title>
-  </head>
-
-  <body>
     <h1>About</h1>
     <p>
     The <a href="http://railstutorial.org/"><em>Ruby on Rails Tutorial</em></a>
@@ -16,5 +10,3 @@
 
     This is a sample application for the Tutorial.
     </p>
-  </body>
-</html>
