--- a/sample_app/app/views/static_pages/help.html.erb
+++ b/sample_app/app/views/static_pages/help.html.erb
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Help | Ruby on Rails Tutorial Sample App</title>
-  </head>
+<% provide(:title, "Help") %>
 
-  <body>
     <h1>Help</h1>
     <p>
     Get help on the Ruby on Rails Tutorial at the 
@@ -13,6 +8,3 @@
     <a href="http://railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
     book</a>
     </p>
-  </body>
-</html>
-
