--- a/toy_app/app/views/microposts/index.html.erb
+++ b/toy_app/app/views/microposts/index.html.erb
@@ -6,7 +6,8 @@
   <thead>
     <tr>
       <th>Content</th>
-      <th>User</th>
+      <th>User Id</th>
+      <th>User Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= micropost.content %></td>
         <td><%= micropost.user_id %></td>
+        <td><%= User.find(micropost.user_id).name %></td>
         <td><%= link_to 'Show', micropost %></td>
         <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
         <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
